--- a/BC.Common/workspace/projects/bc-master/src/app/master-profile/update-master/update-master.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/master-profile/update-master/update-master.component.html
@@ -15,7 +15,7 @@
       <div class="content">
         <div style="width: 160px; height: 160px;">
           <ion-img
-            [src]="vm.Master?.avatarUrl ? vm.Master.avatarUrl : 'https://skillmarket.ru/images/userpic/1/default_avatar_iasu-2u.png'">
+            [src]="vm.Master?.avatarUrl ? vm.Master?.avatarUrl : 'https://skillmarket.ru/images/userpic/1/default_avatar_iasu-2u.png'">
           </ion-img>
         </div>
         <ion-item>
