Add master calendar functionality

--- a/BC.Common/workspace/projects/bc-master/src/app/calendar/day/day.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/calendar/day/day.component.html
@@ -11,11 +11,15 @@
   </ion-header>
 
   <ion-content *ngIf="vm.day?.items.length > 0;else empty">
+    <ion-item #range disabled="true">
+      <ion-range slot="start" color="medium" dualKnobs="true" [min]="rangeMin" [max]="rangeMax" step="1" snaps="true"></ion-range>
+      <ion-button color="medium" (click)="addPause($event)" slot="end">Confirm</ion-button>
+    </ion-item>
     <ion-card *ngFor="let item of vm.day?.items">
       <ion-item>Item type: {{item.itemType}}
         <ion-button *ngIf="item.itemType === 'Booking'" color="medium" slot="end" (click)="cancelBooking(item.id)">Cancel booking</ion-button>
         <ion-button *ngIf="item.itemType === 'Pause'" color="medium" slot="end" (click)="cancelPause(item.id)">Cancel pause</ion-button>
-        <ion-button *ngIf="item.itemType === 'Window'" color="medium" slot="end" (click)="{}">Create pause</ion-button>
+        <ion-button *ngIf="item.itemType === 'Window'" color="medium" slot="end" (click)="enableRange(item)">Create pause</ion-button>
       </ion-item>
       <ion-item *ngIf="item.itemType == 'Booking'">Client: {{item.clientId}}</ion-item>
       <ion-item>Start-time: {{item.startTime | date : 'H:mm'}}</ion-item>
