--- a/BC.Common/workspace/projects/bc-master/src/app/calendar/day/day.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/calendar/day/day.component.html
@@ -3,24 +3,38 @@
     <ion-toolbar>
       <ion-item>
         <ion-icon name="storefront-outline" [routerLink]="['/']"></ion-icon>
-        <ion-title> Days </ion-title>
-        <ion-button color="medium" [routerLink]="['../../week']" >Week</ion-button>
+        <ion-title> Days</ion-title>
+        <ion-button color="medium" [routerLink]="['../../week']">Week</ion-button>
         <ion-button *ngIf="tokenStore.get()" color="medium" (click)="logOut()">Logout</ion-button>
       </ion-item>
     </ion-toolbar>
   </ion-header>
 
   <ion-content *ngIf="vm.day?.items.length > 0;else empty">
-    <ion-item #range disabled="true">
-      <ion-range slot="start" pin="true" color="medium" dualKnobs="true" [min]="rangeMin" [max]="rangeMax" step="1" snaps="true"></ion-range>
-      <ion-button color="medium" (click)="range.disabled = true" slot="end">Cancel</ion-button>
-      <ion-button color="medium" (click)="addPause($event)" slot="end">Confirm</ion-button>
+    <ion-item #rangeItem disabled="true">
+      <ion-range disabled="true" #range slot="start" pin="true" color="medium" dualKnobs="true" [min]="rangeMin"
+                 [max]="rangeMax" step="1"
+                 snaps="true"></ion-range>
+      <ion-button disabled="true" #rangeCancel color="medium"
+                  (click)="range.disabled = true; rangeCancel.disabled = true; rangeConfirm.disabled = true; rangeItem.disabled = true;"
+                  slot="end">Cancel
+      </ion-button>
+      <ion-button disabled="true" #rangeConfirm color="medium" (click)="addPause($event)" slot="end">Confirm
+      </ion-button>
     </ion-item>
     <ion-card *ngFor="let item of vm.day?.items">
       <ion-item>Item type: {{item.itemType}}
-        <ion-button *ngIf="item.itemType === 'Booking'" color="medium" slot="end" (click)="cancelBooking(item.id)">Cancel booking</ion-button>
-        <ion-button *ngIf="item.itemType === 'Pause'" color="medium" slot="end" (click)="cancelPause(item.id)">Cancel pause</ion-button>
-        <ion-button *ngIf="item.itemType === 'Window'" color="medium" slot="end" (click)="enableRange(item)">Create pause</ion-button>
+        <ion-button *ngIf="item.itemType === 'Booking'" color="medium" slot="end" (click)="cancelBooking(item.id)">
+          Cancel booking
+        </ion-button>
+        <ion-button *ngIf="item.itemType === 'Pause'" color="medium" slot="end" (click)="cancelPause(item.id)">Cancel
+          pause
+        </ion-button>
+        <ion-button *ngIf="item.itemType === 'Window'" color="medium" slot="end"
+                    (click)="enableRange(item); range.disabled = false; rangeCancel.disabled = false; rangeConfirm.disabled = false; rangeItem.disabled = false;">
+          Create
+          pause
+        </ion-button>
       </ion-item>
       <ion-item *ngIf="item.itemType == 'Booking'">Client: {{item.clientId}}</ion-item>
       <ion-item>Start-time: {{item.startTime | date : 'H:mm'}}</ion-item>
