--- a/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.html
@@ -72,7 +72,12 @@
                 {{day.date | date}}
               </ion-col>
               <ion-col size="0.2"
-                       (click)="enableRange(item); rangeItem.disabled = false; range.disabled = false; rangeConfirm.disabled = false; rangeCancel.disabled = false;"
+                       (click)="
+                       rangeItem.disabled = !(item.itemType == 'Window');
+                       range.disabled = !(item.itemType == 'Window');
+                       rangeConfirm.disabled = !(item.itemType == 'Window');
+                       rangeCancel.disabled = !(item.itemType == 'Window');
+                       enableRange(item);"
                        class="grid_col" *ngFor="let item of day?.items"
                        [class.grid_col_window]="item.itemType == 'Window'"
                        [class.grid_col_booking_client]="item.itemType == 'Booking' && this.vm.ClientId == item.clientId"
