--- a/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.html
+++ b/BC.Common/workspace/projects/bc-client/src/app/masters/master-profile/master-profile.component.html
@@ -52,13 +52,15 @@
             </ion-label>
           </ion-item>
         </div>
-        <ion-item #rangeItem disabled="true">
-          <ion-range #range disabled="true" slot="start" pin="true" color="medium" dualKnobs="true" [min]="rangeMin"
+        <ion-item>
+          <ion-range #range disabled="true" pin="true" color="medium" dualKnobs="true" [min]="rangeMin"
                      [max]="rangeMax" step="1"
                      snaps="true"></ion-range>
+        </ion-item>
+        <ion-item>
           <ion-button #rangeCancel disabled="true" color="medium"
-                      (click)="rangeItem.disabled = true; range.disabled = true; rangeConfirm.disabled = true; rangeCancel.disabled = true;"
-                      slot="end">Cancel
+                      (click)="range.disabled = true; rangeConfirm.disabled = true; rangeCancel.disabled = true;"
+                      slot="start">Cancel
           </ion-button>
           <ion-button #rangeConfirm disabled="true" color="medium" (click)="changeItemState($event)" slot="end">
             Confirm
@@ -73,7 +75,6 @@
               </ion-col>
               <ion-col size="0.2"
                        (click)="
-                       rangeItem.disabled = !(item.itemType == 'Window');
                        range.disabled = !(item.itemType == 'Window');
                        rangeConfirm.disabled = !(item.itemType == 'Window');
                        rangeCancel.disabled = !(item.itemType == 'Window');
