Hide client id from booking

--- a/BC.Common/workspace/projects/bc-master/src/app/calendar/day/day.component.html
+++ b/BC.Common/workspace/projects/bc-master/src/app/calendar/day/day.component.html
@@ -39,7 +39,7 @@
           pause
         </ion-button>
       </ion-item>
-      <ion-item *ngIf="item.itemType == 'Booking'">Client: {{item.clientId}}</ion-item>
+<!--      <ion-item *ngIf="item.itemType == 'Booking'">Client: {{item.clientId}}</ion-item>-->
       <ion-item>Start-time: {{item.startTime | date : 'H:mm'}}</ion-item>
       <ion-item>End-time: {{item.endTime | date : 'H:mm'}}</ion-item>
     </ion-card>
